# bounding-rects-on-binary-image

./: CMakeLists.txt  main.cpp
